# cmip6_price_forecaster

./: .gitignore  Dockerfile  README.md  app.py  best_model_path.txt  check_mlflow.sh  cli.py  config.yaml  create_data.py  deploy_key  deploy_key.pub  docker-compose.yml  dvc.yaml  environment.yaml  fix_127.sh  fix_cftime_light.sh  generate_mock_data.py  main.py  main.py.bak  nginx.conf  predict.json  pyproject.toml  requirements-api.txt  requirements.txt  requirements.txt.bak  run_all.sh  test_api.py  train.py
.github/workflows/: cd.yml  daily_sync.yml  mlflow.yml  retrain.yml
artifacts/: model.pkl
data/: corn_processed.csv  data
data/final/: corn_dataset.csv
data/processed/: barley_features.csv  rice_features.csv  wheat_features.csv
data/raw/: barley_price.csv  cmip6_pr.nc  cmip6_tasmax.nc  cmip6_wheat.csv  spot_price.csv
docker/: Dockerfile
health/: app.py
infra/: main.tf  variables.tf
kubernetes/: cronjob.yaml  deployment.yaml  service.yaml
mlruns/0/: meta.yaml
mlruns/121163593110607274/: meta.yaml
mlruns/121163593110607274/00529fbbc7d844b3873920b28d43db26/: meta.yaml
mlruns/121163593110607274/016233701aa64588b1bf47cbdea61a13/: meta.yaml
mlruns/121163593110607274/0169e768ed9c408c8f1431c7d9433ecc/: meta.yaml
mlruns/121163593110607274/0198b2a045494052849156c7939c5a4b/: meta.yaml
mlruns/847380373724513837/: meta.yaml
models/: barley_model.pkl
notebooks/: 01_EDA_CMIP6_Commodity.ipynb
scripts/: 01_download_cmip6.py  01_download_cmip6_advanced.py  05_create_report.py  entrypoint.sh  fetch_cmip6.sh  index.html  preprocess.py  startup.sh
src/: auto_deploy_best.py  climate_processor.py  data_merge.py  data_merge.py.bak  economic_processor.py  serve_model.py  train_model.py
src/api/: main.py
src/cmip6_commodity/: barley_processor.py  climate_processor.py  corn_processor.py  feature_engineer.py  rice_processor.py
src/features/: build_features.py
src/models/: ensemble_model.py  prophet_wrapper.py  train.py
src/visualization/: climate_plots.py
templates/: batch_prediction.html  dashboard.html  index.html
tests/: test_feature_engineer.py
(+769 files in other folders)
