[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmip6-commodity-forecaster"
version = "0.1.0"
description = "Climate-informed commodity price forecasting using CMIP6 data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Climate Economics Research Team", email = "research@example.com"}
]
dependencies = [
    "xarray>=2023.0.0",
    "netcdf4>=1.6.0",
    "dask>=2023.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "prophet>=1.1.0",
    "darts>=0.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "esgf-pyclient>=0.7.0",
    "tqdm>=4.65.0",
    "joblib>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0",
    "flake8>=6.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0"
]
ml = [
    "tensorflow>=2.13.0",
    "torch>=2.0.0",
    "xgboost>=1.7.0",
    "lightgbm>=4.0.0"
]
viz = [
    "hvplot>=0.8.0",
    "holoviews>=1.17.0",
    "bokeh>=3.2.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/cmip6-commodity-forecaster"
Documentation = "https://github.com/yourusername/cmip6-commodity-forecaster/docs"
Repository = "https://github.com/yourusername/cmip6-commodity-forecaster.git"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 88
target-version = ['py39']
